--- a/package.json
+++ b/package.json
@@ -1,36 +1,25 @@
 {
   "name": "we-plugin-location",
   "description": "We.js location plugin",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "license": "MIT",
   "main": "lib/index.js",
   "dependencies": {
-    "async": "^0.9.0",
-    "lodash": "^3.0.1",
-    "we-helpers": "^0.0.7"
+    "async": "^1.2.1",
+    "lodash": "^3.0.1"
   },
-  "devDependencies": {
-    "mocha": "^1.18.2",
-    "istanbul": "^0.2.7",
-    "jshint": "^2.5.0",
-    "jscs": "^1.4.5"
-  },
+  "devDependencies": {},
   "engines": {
     "node": ">=0.10.0"
   },
   "scripts": {
-    "lint": "jshint .",
-    "checkStyle": "jscs .",
-    "pretest": "npm run-script lint && npm run-script checkStyle",
-    "test": "istanbul cover ./node_modules/.bin/_mocha test",
-    "posttest": "istanbul check-coverage && rm -rf coverage",
     "prepublish": "npm prune"
   },
   "keywords": [
     "we.js",
     "wejs",
     "plugin",
-    "sails.js"
+    "location"
   ],
   "repository": {
     "type": "git",
