--- a/package.json
+++ b/package.json
@@ -1,25 +1,14 @@
 {
   "name": "we-plugin-location",
   "description": "We.js location plugin",
-  "version": "0.3.5",
+  "version": "1.0.0",
   "license": "MIT",
-  "main": "lib/index.js",
+  "main": "plugin.js",
   "dependencies": {},
-  "devDependencies": {},
-  "engines": {
-    "node": ">=0.10.0"
-  },
-  "scripts": {
-    "prepublish": "npm prune"
-  },
   "keywords": [
-    "we.js",
-    "wejs",
-    "plugin",
-    "location"
+    "wejs-plugin"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:wejs/we-plugin-location.git"
-  }
+  "repository": "wejs/we-plugin-location",
+  "author": "Alberto Souza <contato@albertosouza.net>",
+  "wejs": {}
 }
